@@ -17,6 +17,7 @@
 #define FEATURE_CALLED_SPACE_IDENTIFICATION
 #define FEATURE_CHANNEL_SUBSYSTEM
 #define FEATURE_CHECKSUM_INSTRUCTION
+#define FEATURE_CHSC
 #define FEATURE_COMPARE_AND_MOVE_EXTENDED
 #define FEATURE_COMPRESSION
 #define FEATURE_CPU_RECONFIG
@@ -57,7 +58,6 @@
 #define FEATURE_RESUME_PROGRAM
 #define FEATURE_S390_DAT
 #define FEATURE_SERVICE_PROCESSOR
-#define FEATURE_CHSC
 #define FEATURE_SQUARE_ROOT
 #define FEATURE_STORAGE_KEY_ASSIST
 #define FEATURE_STORAGE_PROTECTION_OVERRIDE
