@@ -17,6 +17,7 @@
 #define FEATURE_CALLED_SPACE_IDENTIFICATION
 #define FEATURE_CHANNEL_SUBSYSTEM
 #define FEATURE_CHECKSUM_INSTRUCTION
+#define FEATURE_CHSC
 #define FEATURE_COMPARE_AND_MOVE_EXTENDED
 #define FEATURE_COMPRESSION
 #define FEATURE_CPU_RECONFIG
@@ -67,18 +68,19 @@
 #define FEATURE_QUEUED_DIRECT_IO
 #define FEATURE_RESUME_PROGRAM
 #define FEATURE_REGION_RELOCATE
+//#define FEATURE_SENSE_RUNNING_STATUS                             /*@Z9*/
 #define FEATURE_SERVICE_PROCESSOR
-#define FEATURE_CHSC
 #define FEATURE_SQUARE_ROOT
 #define FEATURE_STORAGE_KEY_ASSIST
 #define FEATURE_STORAGE_PROTECTION_OVERRIDE
 //#define FEATURE_STORE_CLOCK_FAST                                 /*@Z9*/
-//#define FEATURE_STORE_FACILITY_LIST_EXTENDED                     /*@Z9*/
+#define FEATURE_STORE_FACILITY_LIST_EXTENDED                     /*@Z9*/
 #define FEATURE_STORE_SYSTEM_INFORMATION
 #define FEATURE_SUBSPACE_GROUP
 #define FEATURE_SUPPRESSION_ON_PROTECTION
 #define FEATURE_SYSTEM_CONSOLE
 #define FEATURE_TEST_BLOCK
+//#define FEATURE_TOD_CLOCK_STEERING                               /*@Z9*/
 #define FEATURE_TRACING
 #define FEATURE_WAITSTATE_ASSIST
 
