@@ -90,12 +90,14 @@
 #undef FEATURE_CHANNEL_SUBSYSTEM
 #undef FEATURE_CHANNEL_SWITCHING
 #undef FEATURE_CHECKSUM_INSTRUCTION
+#undef FEATURE_CHSC
 #undef FEATURE_COMPARE_AND_MOVE_EXTENDED
 #undef FEATURE_COMPRESSION
 #undef FEATURE_CPU_RECONFIG
 #undef FEATURE_DAT_ENHANCEMENT
 #undef FEATURE_DAT_ENHANCEMENT_FACILITY_2                       /*@Z9*/
 #undef FEATURE_DUAL_ADDRESS_SPACE
+#undef FEATURE_ECPSVM
 #undef FEATURE_EMULATE_VM
 #undef FEATURE_ESAME
 #undef FEATURE_ESAME_N3_ESA390
@@ -147,10 +149,9 @@
 #undef FEATURE_S370_CHANNEL
 #undef FEATURE_S390_DAT
 #undef FEATURE_S370E_EXTENDED_ADDRESSING
+#undef FEATURE_SENSE_RUNNING_STATUS                             /*@Z9*/
 #undef FEATURE_SERVICE_PROCESSOR
 #undef FEATURE_SEGMENT_PROTECTION
-#undef FEATURE_CHANNEL_SWITCHING
-#undef FEATURE_CHSC
 #undef FEATURE_SQUARE_ROOT
 #undef FEATURE_STORAGE_KEY_ASSIST
 #undef FEATURE_STORAGE_PROTECTION_OVERRIDE
@@ -161,9 +162,9 @@
 #undef FEATURE_SUPPRESSION_ON_PROTECTION
 #undef FEATURE_SYSTEM_CONSOLE
 #undef FEATURE_TEST_BLOCK
+#undef FEATURE_TOD_CLOCK_STEERING                               /*@Z9*/
 #undef FEATURE_TRACING
 #undef FEATURE_VECTOR_FACILITY
 #undef FEATURE_WAITSTATE_ASSIST
-#undef FEATURE_ECPSVM
 
 /* end of FEATALL.H */
