@@ -726,6 +726,7 @@
 <li>List-Directed Initial Program Load</li>
 <li>Modified CCW Indirect Data Addressing (MIDAW) Facility</li>
 <li>Extended-Immediate Facility</li>
+<li>Store-Facility-List-Extended Facility</li>
 </ul>
 
 <P>The following standard feature has not yet been implemented: </P>
@@ -899,7 +900,7 @@ lists, please let me (Jay Maynard) know.</P>
 </P>
 <P>
 <small>
-Last updated 05 Oct 2005
+Last updated 06 Oct 2005
 </small>
 </P>
 </BODY>
